--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                       <li class="menuItem">
                         <a href="#exprience">经历</a>
                       </li>
-                      <li class="menuItem">
+                   <!--    <li class="menuItem">
                         <a href="#reffernces">项目</a>
-                      </li>
+                      </li> -->
                       <li class="menuItem">
                         <a href="#contact">联系我</a>
                       </li>
